[package]
name = "mc-sign-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
fastnbt = "2.4.3"
flate2 = "1.0.25"
#hematite-nbt = { version = "0.5.2", features = ["serde"] }
num_cpus = "1.15.0"
regex = "1.7.1"
serde = "1.0.156"
serde_json = "1.0.94"
threadpool = "1.8.1"
